--- a/index.html
+++ b/index.html
@@ -1432,7 +1432,7 @@ input[type=range]::-webkit-slider-thumb {
   </div>
   <div class="answers-header">
   <div class="answers-title-wrapper">
-    <h2 class="text-xl font-bold text-wabi">回答列表
+    <h2 class="text-xl font-bold text-wabi">所有回答
       <span class="text-base font-normal text-wabi-secondary ml-2">(<span id="remainingTimeDisplay">10:00</span>)</span>
     </h2>
     <div class="font-controls">
@@ -3819,7 +3819,7 @@ document.getElementById('fullscreenToggle').addEventListener('click', function()
   <div class="bg-paper border-b border-stone-gray border-opacity-20 p-4 flex justify-between items-center shadow-sm flex-shrink-0 z-50">
     <h2 class="text-2xl font-bold text-charcoal">
       <i class="fas fa-comments text-clay-brown mr-3"></i>
-      學生回答列表
+      所有回答
     </h2>
     <div class="flex items-center gap-3">
       <!-- 字體控制按鈕 -->
@@ -3959,7 +3959,7 @@ document.getElementById('brushSize')?.addEventListener('click', function(e) {
 <!-- 替換全屏倒計時HTML -->
 <div id="fullscreenCountdown" class="hidden fixed inset-0 bg-black bg-opacity-90 z-50 flex items-center justify-center">
   <div class="w-full h-full flex flex-col justify-center items-center px-8">
-    <h2 class="text-4xl md:text-5xl font-bold text-gray-300 mb-6 md:mb-8 opacity-90">回答剩餘時間</h2>
+    <h2 class="text-4xl md:text-5xl font-bold text-gray-300 mb-6 md:mb-8 opacity-90">剩餘時間</h2>
     <div id="fullscreenCountdownDisplay" class="font-bold text-yellow-300 leading-none text-center w-full"></div>
   </div>
   <button id="closeFullscreenCountdown" class="absolute top-4 right-4 md:top-6 md:right-6 w-12 h-12 md:w-14 md:h-14 rounded-full bg-black bg-opacity-30 backdrop-blur-sm flex items-center justify-center text-white text-xl md:text-2xl hover:bg-opacity-50 transition-all duration-300 z-10 border border-gray-700 hover:border-red-500">
